terraform/pub_subnets.tf
resource "aws_subnet" "public_subnet_1" {
    vpc_id = aws_vpc.vpc.id
    cidr_block = "10.0.1.0/24"
    availability_zone = "us-east-1a"
    map_public_ip_on_launch = true
    tags = {
      Name = "public_subnet_1"
      "kubernetes.io/role/elb" = "1"          # Public Load Balancer 
    }
}

resource "aws_subnet" "public_subnet_2" {
    vpc_id = aws_vpc.vpc.id
    cidr_block = "10.0.2.0/24"
    availability_zone = "us-east-1b"
    map_public_ip_on_launch = true    
    tags = {
      Name = "public_subnet_2"
      "kubernetes.io/role/elb" = "1"          # Public Load Balancer 
    }
}
